# CryptographicFileEncryption

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
src/: main.cpp
